                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 05-04-2006 fixed: odml index wouldn't be read for > 2.0gb files (http://thread.gmane.org/gmane.comp.video.mplayer.devel/31404)
  - 26-03-2006 fixed: dts frames with uneven data size would play garbled using hwdts output
  - 25-03-2006 added: ability to cancel vobsub parsing
  - 25-03-2006 fixed: switching from srt -> vobsub wouldn't reset spudec, nor osd
  - 06-02-2006 fixed: http.c authentication fix
  - 03-02-2006 added: support for slave command sub_load/sub_remove. supports loading any text subtitle format after start
  - 02-02-2006 fixed: audio stream in some avi's wouldn't be detected. mplayerhq:asfheader.c:1.43
  - 09-01-2006 added: additional fourcc codes in codec.conf
  - 09-01-2006 added: ffmpeg data padding patch ( malloc padding to avoid access beyond allocated memory ) , hopefully fixes fast wmv's. 
  - 09-01-2006 changed: explicitly disabled gif and jpeg instead of relying on autodetection
  - 09-01-2006 fixed: xbmc wasn't compilable with mingw5, due to missing sleep function
  - 01-01-2006 updated: libmp3 to mplayerhq cvs version as of now. fixes some mpegs that where only playing static audio
  - 04-10-2005 updated: ffmpeg to mplayerhq cvs version as of now. fixes a few avi's that where causing problems + a few other stuff
  - 06-09-2005 reverted: when resuming normal playback speed, video would jump ahead a couple of seconds. didn't work well
  - 22-08-2005 updated: libvorbis interface to mplayer cvs (ad_libvorbis.c:1.18), fixes vorbis decoding in both matroska and ogm containers
  - 22-08-2005 updated: matroska demuxer to mplayerhq cvs (demux_mkv.c:1.45)