@@ -13,6 +13,11 @@
 #include "demuxer.h"
 
 
+#define ASFMIN(a,b) ((a) > (b) ? (b) : (a))
+#define SLICE_MIN_START_CODE    0x00000101
+#define SLICE_MAX_START_CODE    0x000001af
+#define END_NOT_FOUND -100
+
 /*
  * Load 16/32-bit values in little endian byte order
  * from an unaligned address
@@ -20,6 +25,10 @@
 #ifdef ARCH_X86
 #define	LOAD_LE32(p)	(*(unsigned int*)(p))
 #define	LOAD_LE16(p)	(*(unsigned short*)(p))
+#define	LOAD_BE32(p)	(((unsigned char*)(p))[3]     | \
+ 			 ((unsigned char*)(p))[2]<< 8 | \
+ 			 ((unsigned char*)(p))[1]<<16 | \
+ 			 ((unsigned char*)(p))[0]<<24 )
 #else
 #define	LOAD_LE32(p)	(((unsigned char*)(p))[0]     | \
  			 ((unsigned char*)(p))[1]<< 8 | \
@@ -27,36 +36,37 @@
  			 ((unsigned char*)(p))[3]<<24 )
 #define	LOAD_LE16(p)	(((unsigned char*)(p))[0]     | \
 			 ((unsigned char*)(p))[1]<<8)
+#define	LOAD_BE32(p)	(*(unsigned int*)(p))
 #endif
 
 // defined at asfheader.c:
-extern unsigned char* asf_packet;
-extern int asf_scrambling_h;
-extern int asf_scrambling_w;
-extern int asf_scrambling_b;
-extern int asf_packetsize;
-extern double asf_packetrate;
-extern int asf_movielength;
+
+extern int asf_check_header(demuxer_t *demuxer);
+extern int read_asf_header(demuxer_t *demuxer);
+
+#ifdef _XBOX /* no priv structure in demuxer */
+extern struct asf_priv *g_asf;
+#endif
 
 // based on asf file-format doc by Eugene [http://divx.euro.ru]
 
-static void asf_descrambling(unsigned char *src,int len){
+static void asf_descrambling(unsigned char **src,unsigned len, struct asf_priv* asf){
   unsigned char *dst=malloc(len);
-  unsigned char *s2=src;
-  int i=0,x,y;
-  while(len-i>=asf_scrambling_h*asf_scrambling_w*asf_scrambling_b){
+  unsigned char *s2=*src;
+  unsigned i=0,x,y;
+  while(len>=asf->scrambling_h*asf->scrambling_w*asf->scrambling_b+i){
 //    mp_msg(MSGT_DEMUX,MSGL_DBG4,"descrambling! (w=%d  b=%d)\n",w,asf_scrambling_b);
 	//i+=asf_scrambling_h*asf_scrambling_w;
-	for(x=0;x<asf_scrambling_w;x++)
-	  for(y=0;y<asf_scrambling_h;y++){
-	    memcpy(dst+i,s2+(y*asf_scrambling_w+x)*asf_scrambling_b,asf_scrambling_b);
-		i+=asf_scrambling_b;
+	for(x=0;x<asf->scrambling_w;x++)
+	  for(y=0;y<asf->scrambling_h;y++){
+	    memcpy(dst+i,s2+(y*asf->scrambling_w+x)*asf->scrambling_b,asf->scrambling_b);
+		i+=asf->scrambling_b;
 	  }
-	s2+=asf_scrambling_h*asf_scrambling_w*asf_scrambling_b;
+	s2+=asf->scrambling_h*asf->scrambling_w*asf->scrambling_b;
   }
   //if(i<len) memcpy(dst+i,src+i,len-i);
-  memcpy(src,dst,i);
-  free(dst);
+  free(*src);
+  *src = dst;
 }
 
 #ifdef USE_LIBAVCODEC_SO
@@ -67,8 +77,86 @@ static void asf_descrambling(unsigned char *src,int len){
 #define FF_INPUT_BUFFER_PADDING_SIZE 8
 #endif
 
+static const uint8_t *find_start_code(const uint8_t * restrict p, const uint8_t *end, uint32_t * restrict state){
+  int i;
+  if(p>=end)
+    return end;
+
+  for(i=0; i<3; i++){
+    uint32_t tmp= *state << 8;
+    *state= tmp + *(p++);
+    if(tmp == 0x100 || p==end)
+      return p;
+  }
+
+  while(p<end){
+    if     (p[-1] > 1      ) p+= 3;
+    else if(p[-2]          ) p+= 2;
+    else if(p[-3]|(p[-1]-1)) p++;
+    else{
+      p++;
+      break;
+    }
+  }
+
+  p= ASFMIN(p, end)-4;
+  *state=  LOAD_BE32(p);
+
+  return p+4;
+}
+
+static int mpeg1_find_frame_end(demuxer_t *demux, const uint8_t *buf, int buf_size)
+{
+  int i;
+  struct asf_priv* asf = g_asf;
+
+  i=0;
+   if(!asf->asf_frame_start_found){
+    for(i=0; i<buf_size; i++){
+      i= find_start_code(buf+i, buf+buf_size, &asf->asf_frame_state) - buf - 1;
+      if(asf->asf_frame_state >= SLICE_MIN_START_CODE && asf->asf_frame_state <= SLICE_MAX_START_CODE){
+        i++;
+        asf->asf_frame_start_found=1;
+        break;
+      }
+    }
+  }
+
+  if(asf->asf_frame_start_found){
+    /* EOF considered as end of frame */
+      if (buf_size == 0)
+          return 0;
+            
+    for(; i<buf_size; i++){
+      i= find_start_code(buf+i, buf+buf_size, &asf->asf_frame_state) - buf - 1;
+      if((asf->asf_frame_state&0xFFFFFF00) == 0x100){
+        //if NOT in range 257 - 431
+        if(asf->asf_frame_state < SLICE_MIN_START_CODE || asf->asf_frame_state > SLICE_MAX_START_CODE){
+          asf->asf_frame_start_found=0;
+          asf->asf_frame_state=-1;
+          return i-3;
+        }
+      }
+    }
+  }
+  return END_NOT_FOUND;
+}
+
+static void demux_asf_append_to_packet(demux_packet_t* dp,unsigned char *data,int len,int offs)
+{
+  if(dp->len!=offs && offs!=-1) mp_msg(MSGT_DEMUX,MSGL_V,"warning! fragment.len=%d BUT next fragment offset=%d  \n",dp->len,offs);
+  dp->buffer=realloc(dp->buffer,dp->len+len+FF_INPUT_BUFFER_PADDING_SIZE);
+  memcpy(dp->buffer+dp->len,data,len);
+  memset(dp->buffer+dp->len+len, 0, FF_INPUT_BUFFER_PADDING_SIZE);
+  mp_dbg(MSGT_DEMUX,MSGL_DBG4,"data appended! %d+%d\n",dp->len,len);
+  dp->len+=len;
+}
+
 static int demux_asf_read_packet(demuxer_t *demux,unsigned char *data,int len,int id,int seq,unsigned long time,unsigned short dur,int offs,int keyframe){
+  struct asf_priv* asf = g_asf;
   demux_stream_t *ds=NULL;
+  int close_seg=0;
+  int frame_end_pos=END_NOT_FOUND;
   
   mp_dbg(MSGT_DEMUX,MSGL_DBG4,"demux_asf.read_packet: id=%d seq=%d len=%d\n",id,seq,len);
   
@@ -99,22 +187,32 @@ static int demux_asf_read_packet(demuxer_t *demux,unsigned char *data,int len,in
   
   if(ds){
     if(ds->asf_packet){
-      if(ds->asf_seq!=seq){
+      demux_packet_t* dp=ds->asf_packet;
+
+      if (ds==demux->video && asf->asf_is_dvr_ms) {
+        frame_end_pos=mpeg1_find_frame_end(demux, data, len);
+
+        if (frame_end_pos != END_NOT_FOUND) {
+          dp->pos=demux->filepos;
+          if (frame_end_pos > 0) {
+            demux_asf_append_to_packet(dp,data,frame_end_pos,offs);
+            data += frame_end_pos;
+            len -= frame_end_pos;
+          }
+          close_seg = 1;
+        } else seq = ds->asf_seq;
+      } else close_seg = ds->asf_seq!=seq;
+
+      if(close_seg){
         // closed segment, finalize packet:
 		if(ds==demux->audio)
-		  if(asf_scrambling_h>1 && asf_scrambling_w>1)
-		    asf_descrambling(ds->asf_packet->buffer,ds->asf_packet->len);
+		  if(asf->scrambling_h>1 && asf->scrambling_w>1 && asf->scrambling_b>0)
+		    asf_descrambling(&ds->asf_packet->buffer,ds->asf_packet->len,asf);
         ds_add_packet(ds,ds->asf_packet);
         ds->asf_packet=NULL;
       } else {
         // append data to it!
-        demux_packet_t* dp=ds->asf_packet;
-        if(dp->len!=offs && offs!=-1) mp_msg(MSGT_DEMUX,MSGL_V,"warning! fragment.len=%d BUT next fragment offset=%d  \n",dp->len,offs);
-        dp->buffer=realloc(dp->buffer,dp->len+len+FF_INPUT_BUFFER_PADDING_SIZE);
-        memcpy(dp->buffer+dp->len,data,len);
-        memset(dp->buffer+dp->len+len, 0, FF_INPUT_BUFFER_PADDING_SIZE);
-        mp_dbg(MSGT_DEMUX,MSGL_DBG4,"data appended! %d+%d\n",dp->len,len);
-        dp->len+=len;
+        demux_asf_append_to_packet(dp,data,len,offs);
         // we are ready now.
         return 1;
       }
@@ -148,6 +246,7 @@ static int demux_asf_read_packet(demuxer_t *demux,unsigned char *data,int len,in
 //     0 = EOF or no stream found
 //     1 = successfully read a packet
 int demux_asf_fill_buffer(demuxer_t *demux){
+  struct asf_priv* asf = g_asf;
 
   demux->filepos=stream_tell(demux->stream);
   // Brodcast stream have movi_start==movi_end
@@ -157,17 +256,17 @@ int demux_asf_fill_buffer(demuxer_t *demux){
           return 0;
   }
 
-    stream_read(demux->stream,asf_packet,asf_packetsize);
+    stream_read(demux->stream,asf->packet,asf->packetsize);
     if(demux->stream->eof) return 0; // EOF
     
     {
-	    unsigned char* p=asf_packet;
-            unsigned char* p_end=asf_packet+asf_packetsize;
+	    unsigned char* p=asf->packet;
+            unsigned char* p_end=asf->packet+asf->packetsize;
             unsigned char flags=p[0];
             unsigned char segtype=p[1];
-            int padding;
-            int plen;
-	    int sequence;
+            unsigned padding;
+            unsigned plen;
+	    unsigned sequence;
             unsigned long time=0;
             unsigned short duration=0;
 
@@ -177,7 +276,7 @@ int demux_asf_fill_buffer(demuxer_t *demux){
             
             if(verbose>1){
                 int i;
-                for(i=0;i<16;i++) printf(" %02X",asf_packet[i]);
+                for(i=0;i<16;i++) printf(" %02X",asf->packet[i]);
                 printf("\n");
             }
             
@@ -224,10 +323,10 @@ int demux_asf_fill_buffer(demuxer_t *demux){
 	    if(((flags>>5)&3)!=0){
               // Explicit (absoulte) packet size
               mp_dbg(MSGT_DEMUX,MSGL_DBG2,"Explicit packet size specified: %d  \n",plen);
-              if(plen>asf_packetsize) mp_msg(MSGT_DEMUX,MSGL_V,"Warning! plen>packetsize! (%d>%d)  \n",plen,asf_packetsize);
+              if(plen>asf->packetsize) mp_msg(MSGT_DEMUX,MSGL_V,"Warning! plen>packetsize! (%d>%d)  \n",plen,asf->packetsize);
 	    } else {
               // Padding (relative) size
-              plen=asf_packetsize-padding;
+              plen=asf->packetsize-padding;
 	    }
 
 	    // Read time & duration:
@@ -241,8 +340,8 @@ int demux_asf_fill_buffer(demuxer_t *demux){
               segs=p[0] & 0x3F;
               ++p;
             }
-            mp_dbg(MSGT_DEMUX,MSGL_DBG4,"%08X:  flag=%02X  segs=%d  seq=%d  plen=%d  pad=%d  time=%ld  dur=%d\n",
-              demux->filepos,flags,segs,sequence,plen,padding,time,duration);
+            mp_dbg(MSGT_DEMUX,MSGL_DBG4,"%08"PRIu64":  flag=%02X  segs=%d  seq=%u  plen=%u  pad=%u  time=%ld  dur=%d\n",
+              (uint64_t)demux->filepos,flags,segs,sequence,plen,padding,time,duration);
 
             for(seg=0;seg<segs;seg++){
               //ASF_segmhdr_t* sh;
@@ -317,11 +416,11 @@ int demux_asf_fill_buffer(demuxer_t *demux){
 	          case 3: len=LOAD_LE32(p);p+=4;break;	// dword
 	          case 2: len=LOAD_LE16(p);p+=2;break;	// word
 	          case 1: len=p[0];p++;break;		// byte
-	          default: len=plen-(p-asf_packet); // ???
+	          default: len=plen-(p-asf->packet); // ???
 		}
               } else {
                 // single segment
-                len=plen-(p-asf_packet);
+                len=plen-(p-asf->packet);
               }
               if(len<0 || (p+len)>p_end){
                 mp_msg(MSGT_DEMUX,MSGL_V,"ASF_parser: warning! segment len=%d\n",len);
@@ -358,7 +457,7 @@ int demux_asf_fill_buffer(demuxer_t *demux){
             return 1; // success
     }
     
-    mp_msg(MSGT_DEMUX,MSGL_V,"%08X:  UNKNOWN TYPE  %02X %02X %02X %02X %02X...\n",demux->filepos,asf_packet[0],asf_packet[1],asf_packet[2],asf_packet[3],asf_packet[4]);
+    mp_msg(MSGT_DEMUX,MSGL_V,"%08"PRIX64":  UNKNOWN TYPE  %02X %02X %02X %02X %02X...\n",(int64_t)demux->filepos,asf->packet[0],asf->packet[1],asf->packet[2],asf->packet[3],asf->packet[4]);
     return 0;
 }
 
@@ -368,6 +467,7 @@ extern void resync_audio_stream(sh_audio_t *sh_audio);
 extern void skip_audio_frame(sh_audio_t *sh_audio);
 
 void demux_seek_asf(demuxer_t *demuxer,float rel_seek_secs,int flags){
+    struct asf_priv* asf = g_asf;
     demux_stream_t *d_audio=demuxer->audio;
     demux_stream_t *d_video=demuxer->video;
     sh_audio_t *sh_audio=d_audio->sh;
@@ -377,11 +477,11 @@ void demux_seek_asf(demuxer_t *demuxer,float rel_seek_secs,int flags){
   //FIXME: reports good or bad to steve@daviesfam.org please
 
   //================= seek in ASF ==========================
-    float p_rate=asf_packetrate; // packets / sec
+    float p_rate=asf->packetrate; // packets / sec
     off_t rel_seek_packs=(flags&2)?	 // FIXME: int may be enough?
-	(rel_seek_secs*(demuxer->movi_end-demuxer->movi_start)/asf_packetsize):
+	(rel_seek_secs*(demuxer->movi_end-demuxer->movi_start)/asf->packetsize):
 	(rel_seek_secs*p_rate);
-    off_t rel_seek_bytes=rel_seek_packs*asf_packetsize;
+    off_t rel_seek_bytes=rel_seek_packs*asf->packetsize;
     off_t newpos;
     //printf("ASF: packs: %d  duration: %d  \n",(int)fileh.packets,*((int*)&fileh.duration));
 //    printf("ASF_seek: %d secs -> %d packs -> %d bytes  \n",
@@ -420,6 +520,7 @@ void demux_seek_asf(demuxer_t *demuxer,float rel_seek_secs,int flags){
 }
 
 int demux_asf_control(demuxer_t *demuxer,int cmd, void *arg){
+    struct asf_priv* asf = g_asf;
 /*  demux_stream_t *d_audio=demuxer->audio;
     demux_stream_t *d_video=demuxer->video;
     sh_audio_t *sh_audio=d_audio->sh;
@@ -427,7 +528,7 @@ int demux_asf_control(demuxer_t *demuxer,int cmd, void *arg){
 */
     switch(cmd) {
 	case DEMUXER_CTRL_GET_TIME_LENGTH:
-	    *((unsigned long *)arg)=(unsigned long)(asf_movielength);
+	    *((unsigned long *)arg)=(unsigned long)(asf->movielength);
 	    return DEMUXER_CTRL_OK;
 
 	case DEMUXER_CTRL_GET_PERCENT_POS:
